# expenses_webapp

./: README.md  pyproject.toml
expensesapp/: app.py  models.py  services.py
tests/e2e/: __init__.py  bad_type.csv  test_endpoints.py
tests/integration/: conftest.py  test_create_report.py  test_save_transactions.py
